# ShopeeChallenge

./: README.md  analysis.ipynb  analysis_polars.ipynb  pyproject.toml
