[tool.poetry]
name = "shopee"
version = "0.1.0"
description = ""
authors = ["andreale28 <lhson43680@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
pandas = "^1.5.0"
sklearn = "^0.0"
matplotlib = "^3.6.1"
hvplot = "^0.8.1"
modin = {extras = ["all"], version = "^0.16.1"}
protobuf = "3.20.*"
polars = {extras = ["numpy", "pandas", "pyarrow"], version = "^0.14.23"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

